--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -27,30 +27,32 @@ input[type="text"] {
   display: grid;
   padding-top: 15px;
 }
-.slider {
-  width: 100%;
-  height: 100%;
-  background-color: black;
-  position: relative;
-  background-image: url('../images/slider1.jpg');
-  background-position: center;
-  background-size: contain;
-  background-repeat: no-repeat;
-}
+
 aside {
   display: none;
 }
-.slider .btn {
-  border: 0;
-  position: absolute;
-}
-.slider .btn#right {
-  right: 0;
+.slider{
+  display: none;
 }
 @media (min-width: 992px) {
   .banner img {
     margin-left: 4rem;
     display: block;
+  }
+  .slider {
+    width: 100%;
+    height: 100%;
+    background-color: black;
+    position: relative;
+    display: block;
+    /* background-image: url("../images//slider1.jpg"); */
+  }
+  .slider .btn {
+    border: 0;
+    position: absolute;
+  }
+  .slider .btn#right {
+    right: 0;
   }
   input[type="text"] {
     width: 50%;
