--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -7,6 +7,9 @@
 .banner img {
   display: none;
 }
+.cont {
+  display: grid;
+}
 input[type="text"] {
   width: 70%;
   padding: 15px 25px;
@@ -26,13 +29,19 @@ input[type="text"] {
 .homecontent {
   display: grid;
   padding: 15px;
+  position: relative;
 }
 
 aside {
   display: none;
 }
-.slider{
+.slider {
   display: none;
+  position: relative;
+}
+
+img#slider{
+  width:100%;
 }
 @media (min-width: 992px) {
   .banner img {
@@ -42,17 +51,27 @@ aside {
   .slider {
     width: 100%;
     height: 100%;
-    background-color: black;
-    position: relative;
     display: block;
-    /* background-image: url("../images//slider1.jpg"); */
   }
+
   .slider .btn {
     border: 0;
     position: absolute;
   }
   .slider .btn#right {
     right: 0;
+    top:0;
+  }
+  .slider .btn#left {
+    left: 0;
+    top:0;
+  }
+  .slide {
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 100%;
+    height: 100%;
   }
   input[type="text"] {
     width: 50%;
@@ -64,5 +83,15 @@ aside {
   }
   aside {
     display: block;
+    position: static;
   }
+  /* .slide1 {
+    background-image: url("../images/slider1.jpg");
+  }
+  .slide2 {
+    background-image: url("../images/slider2.jpeg");
+  }
+  .slide3 {
+    background-image: url("../images/slider3.jpg");
+  } */
 }
