--- a/src/component/product/item.css
+++ b/src/component/product/item.css
@@ -1,12 +1,14 @@
 .card {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     max-width: 300px;
-    margin: auto;
+    /* margin: auto; */
     text-align: center;
     font-family: arial;
+    position: relative;
   }
   .card img{
-      height: 300px;
+      height: 250px;
+      width: 200px;
   }
   .price {
     color: grey;
@@ -16,15 +18,19 @@
   .card button {
     border: none;
     outline: 0;
-    padding: 12px;
+    /* padding: 12px; */
     color: white;
     background-color: #000;
     text-align: center;
     cursor: pointer;
-    width: 100%;
+    width: 30px;
+    height:30px;
+    border-radius: 50%;
     font-size: 18px;
+    position: absolute;
+    left:5%;
+    top:2%
   }
-  
   .card button:hover {
     opacity: 0.7;
   }
