--- a/src/component/product/item.css
+++ b/src/component/product/item.css
@@ -1,36 +1,38 @@
 .card {
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    max-width: 300px;
-    /* margin: auto; */
-    text-align: center;
-    font-family: arial;
-    position: relative;
-  }
-  .card img{
-      height: 250px;
-      width: 200px;
-  }
-  .price {
-    color: grey;
-    font-size: 22px;
-  }
-  
-  .card button {
-    border: none;
-    outline: 0;
-    /* padding: 12px; */
-    color: white;
-    background-color: #000;
-    text-align: center;
-    cursor: pointer;
-    width: 30px;
-    height:30px;
-    border-radius: 50%;
-    font-size: 18px;
-    position: absolute;
-    left:5%;
-    top:2%
-  }
-  .card button:hover {
-    opacity: 0.7;
-  }
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  max-width: 300px;
+  text-align: left;
+  font-family: arial;
+  position: relative;
+}
+.card img {
+  height: 250px;
+  width: 200px;
+}
+.price {
+  color: grey;
+  font-size: 1rem;
+}
+
+.card button {
+  border: none;
+  outline: 0;
+  /* padding: 12px; */
+  color: white;
+  background-color: #000;
+  text-align: center;
+  cursor: pointer;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  font-size: 18px;
+  position: absolute;
+  left: 5%;
+  top: 2%;
+}
+.card button:hover {
+  opacity: 0.7;
+}
+.card p {
+  padding-left: 1em;
+}
