--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -3,13 +3,14 @@
   position: relative;
   padding-top: 50px;
   height: 264px;
+  display: grid;
 }
 .banner img {
   display: none;
 }
 input[type="text"] {
   width: 70%;
-  padding: 15px 25px;
+  /* padding: 15px 25px; */
   margin: 8px 0;
   box-sizing: border-box;
   border: 1px solid #ccc;
@@ -22,6 +23,7 @@ input[type="text"] {
   transform: translate(-50%, -50%);
   top: 50%;
   left: 50%;
+  height: 30%;
 }
 .homecontent{
   display: grid;
@@ -42,8 +44,11 @@ aside {
   display: none;
 }
 @media (min-width: 992px) {
+.banner{
+  grid-template-columns: 0.5fr 8fr 0.5fr;
+}
   .banner img {
-    margin-left: 4rem;
+    /* margin-left: 2rem; */
     display: block;
   }
   #item{
@@ -52,7 +57,8 @@ aside {
 
   }
   input[type="text"] {
-    width: 50%;
+    width: 100%;
+    position: relative;
   }
   .homecontent , .contentarea , .products {
     grid-template-columns: 1fr 3fr;
